--- a/setup.dox
+++ b/setup.dox
@@ -763,7 +763,7 @@ WARN_LOGFILE           = warnings.dox
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = ./src ./tests ./examples README.md
+INPUT                  = ./src ./tests README.md
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
