improved file saving for MeshedFields

--- a/scripts/CreateDiffractionScreen.ipynb
+++ b/scripts/CreateDiffractionScreen.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
     "screen.dt = 1.0e-13\n",
     "# all points use the same timing grid\n",
     "screen.Nt = 400\n",
-    "screen.t0 = [p[2]/constants.c-screen.Nt/2*screen.dt for p in screen.pos]"
+    "screen.t0 = np.array([p[2]/constants.c-screen.Nt/2*screen.dt for p in screen.pos])"
    ]
   },
   {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
