correctly positioned diffraction screen for test case

--- a/scripts/CreateDiffractionScreen.ipynb
+++ b/scripts/CreateDiffractionScreen.ipynb
@@ -73,7 +73,10 @@
     "# now we can create the mesh\n",
     "mesh = pygmsh.generate_mesh(geom, dim=2, verbose=False)\n",
     "# we squeeze the ellipse back to a circle\n",
-    "pts = [np.array([p[0]/stretch,p[1],p[0]/stretch]) for p in mesh.points ]\n",
+    "# angle it\n",
+    "# and move the screen to its intended position\n",
+    "d = np.array([0.0,0.0,1.0])\n",
+    "pts = [np.array([p[0]/stretch,p[1],p[0]/stretch])+d for p in mesh.points ]\n",
     "tris = mesh.cells['triangle']\n",
     "screen = MeshedField(pts,tris)"
    ]
@@ -82,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The screen is placed at z=0.1m from th origin. A beam is assumed to propagate in z direction<br>\n",
+    "The screen is placed at z=1m from th origin. A beam is assumed to propagate in z direction<br>\n",
     "The fields shall be reflected to th x direction. The screen normal is pointing in the negative z and positive x direction (x - left, y - up)."
    ]
   },
@@ -98,7 +101,7 @@
       "7572 points\n",
       "14716 triangles\n",
       "total mesh area =  39.803 cm²\n",
-      "screen normal = [ 0.70710678  0.         -0.70710678]\n"
+      "screen normal = [  7.07106781e-01  -1.95675363e-16  -7.07106781e-01]\n"
      ]
     }
    ],
@@ -152,6 +155,13 @@
     "filename=\"../tests/DiffractionScreen.h5\"\n",
     "screen.WriteMeshedField(filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
