added hard edge dipole to the lattice elements

--- a/doc/UserManual.tex
+++ b/doc/UserManual.tex
@@ -68,13 +68,37 @@ listed here were missing. Some example input files are contained in the \verb|ex
 
 \subsection{Lattice description}
 
+%undulator
+%    planar
+%    transverse gradient
+%wave
+%    gaussian
+%dipole
+%    hard edge
+%background
+
 \subsection{Beam description}
+
+%particle
+%bunch
+
+\subsection{Tracking definitions}
+
+%method
+%watch
 
 \subsection{Definition of Observations}
 
+%snapshot
+%screen
+%mesh
+%point
+
 \subsection{The calculator}
 
-\section{Scrips for output visualization}
+\section{Scripts for creating input files}
+
+\section{Scripts for output visualization}
 
 \end{document}
 
