added MPI run to tests

--- a/doc/UserManual.tex
+++ b/doc/UserManual.tex
@@ -49,6 +49,8 @@
 
 \subsection{Installation}
 
+\subsection{Testing}
+
 \section{Input files}
 
 The input to TEUFEL consists of a human readable XML file. The content should follow
