added example script for toroidal mirror

--- a/scripts/CreateU300mirror.ipynb
+++ b/scripts/CreateU300mirror.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,15 @@
     "normals = screen.MeshNormals()\n",
     "average = np.sum(normals, axis=0)/screen.Np\n",
     "print(\"total mesh area = %7.3f cm²\" % (1.0e4*np.sum(area)))\n",
-    "print(\"screen normal = %s\" % average)\n",
+    "print(\"screen normal = %s\" % average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "screen.ShowMeshedField(showAxes=True)"
    ]
   },
@@ -242,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
